# auto-wallpaper

./: .commitlintrc.json  .gitignore  Cargo.toml  README.md  data.json  package.json  pnpm-lock.yaml  turbo.json
.github/: release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: draft.yml  release.yml  tauri-release.yml
apps/expo/: package.json
apps/expo/src/app/: index.tsx
apps/expo/src/app/post/: [id].tsx
apps/nextjs/: package.json
apps/nextjs/src/app/: layout.tsx
apps/nextjs/src/app/_components/: posts.tsx
apps/tauri-app/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/tauri-app/src/: env.js
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-app/src-tauri/capabilities/: desktop.json  main.json
apps/tauri-app/src-tauri/icons/: icon.icns
apps/tauri-app/src-tauri/src/: lib.rs  main.rs  tray.rs  utils.rs
apps/tauri-app/src-tauri/src/commands/: mod.rs  prompt.rs  wallpaper.rs  wallpaper_engine.rs
apps/tauri-app/src-tauri/src/libs/: mod.rs
apps/tauri-app/src-tauri/src/libs/app_wallpaper_engine/: mod.rs  status_manager.rs  using_prompt_manager.rs  utils.rs
apps/tauri-app/src-tauri/src/libs/cancellable_future/: mod.rs
apps/tauri-app/src-tauri/src/libs/device_wallpaper/: mod.rs
apps/tauri-app/src-tauri/src/libs/prompt_engine/: mod.rs
apps/tauri-app/src-tauri/src/libs/store/: mod.rs
apps/tauri-app/src-tauri/src/libs/stores/: base.rs  mod.rs
apps/tauri-app/src-tauri/src/libs/stores/albums/: mod.rs
apps/tauri-app/src-tauri/src/libs/stores/temp/: mod.rs
apps/tauri-app/src-tauri/src/libs/stores/user/: mod.rs
apps/tauri-app/src-tauri/src/libs/wallpaper_engine/: mod.rs  structs.rs
apps/tauri-app/src-tauri/src/libs/wallpaper_engine/email_providers/: base.rs  mod.rs  one_sec_mail.rs
apps/tauri-app/src-tauri/src/libs/wallpaper_engine/leonardo/: api.rs  mod.rs
apps/tauri-app/src-tauri/src/libs/wallpaper_engine/managers/: mod.rs  status.rs  using_prompt.rs
apps/tauri-app/src-tauri/src/libs/wallpaper_engine/models/: mod.rs
apps/tauri-app/src-tauri/src/libs/wallpaper_engine/models/leonardo/: mod.rs
apps/tauri-app/src-tauri/src/libs/wallpaper_engine/models/mailbox/: mail_tm.rs  mod.rs  one_secmail.rs  temp_mail_io.rs
apps/tauri-app/src-tauri/src/libs/wallpaper_engine/models/upscale/: mod.rs
apps/tauri-app/src-tauri/src/states/: mod.rs  prompt_engine.rs  wallpaper_engine.rs
apps/tauri-app/src/app/: layout.tsx  page.tsx
apps/tauri-app/src/app/_components/Layout/: index.tsx
apps/tauri-app/src/app/_components/PromptCard/: index.tsx
apps/tauri-app/src/app/_components/PromptsGrid/: index.tsx
apps/tauri-app/src/app/_components/Spinner/: index.tsx
apps/tauri-app/src/app/_components/SpinningStopIcon/: index.tsx
apps/tauri-app/src/app/_components/WallpaperGenerationProvider/: index.tsx
apps/tauri-app/src/app/album/: page.tsx
apps/tauri-app/src/app/album/_components/Album/: index.tsx
apps/tauri-app/src/app/albums/: page.tsx
apps/tauri-app/src/app/albums/_components/AlbumCard/: contexts.ts  index.tsx
apps/tauri-app/src/app/gallery/: _prompts.json  page.tsx
apps/tauri-app/src/app/settings/: page.tsx
apps/tauri-app/src/lib/PromptEngine/: index.ts
apps/tauri-app/src/lib/WallpaperFile/: index.tsx
apps/tauri-app/src/lib/WallpaperGenerator/: hooks.tsx  index.ts  utils.ts
apps/tauri-app/src/lib/WallpaperGenerator/Leonardo/: index.ts  types.ts
apps/tauri-app/src/lib/WallpaperGenerator/mailbox/: index.ts  types.ts
apps/tauri-app/src/lib/WallpaperGenerator/upscaler/: index.ts
apps/tauri-app/src/stores/: albums.ts  makeStore.ts  temp.ts  user.ts
apps/tauri-app/src/utils/: commands.ts  fetchCookie.ts  log.ts  notification.ts  sleep.ts  sort.ts  strConvertors.ts  string.ts  time.ts  wallpapers.ts
tooling/eslint/: base.js  package.json  react.js
tooling/prettier/: index.js  package.json
tooling/tailwind/: base.ts  web.ts
(+24 files in other folders)
