[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "fs-copy-file", "protocol-asset", "dialog-save", "fs-remove-dir", "macos-private-api", "updater", "notification-all", "fs-read-file", "fs-write-file", "window-show", "window-unminimize", "window-close", "window-hide", "window-maximize", "system-tray", "fs-exists", "window-minimize", "fs-create-dir", "http-all", "path-all", "window-unmaximize", "window-start-dragging", "http-multipart"] }
wallpaper = "3.2.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows/", branch = "dev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
tauri-plugin-aptabase = "0.5.1"
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
regex = { version = "1.10.3" }
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4"
chrono-tz = { version = "0.8.6", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
