[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [
    "protocol-asset",
    "macos-private-api",
    "tray-icon",
] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", branch = "v2" }
tauri-plugin-sentry = { git = "https://github.com/arashi-dev/sentry-tauri", branch = "v2" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = [
    "colored",
] }
tauri-plugin-dialog = "2.0.0-beta.5"
tauri-plugin-fs = "2.0.0-beta.5"
tauri-plugin-http = "2.0.0-beta.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wallpaper = "3.2.0"
log = "^0.4"
reqwest = { version = "0.11.24", features = ["json", "cookies", "multipart"] }
regex = { version = "1.10.3" }
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4"
chrono-tz = { version = "0.8.6", features = ["serde"] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
